--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,9 +2,15 @@
     border: 1px solid rgb(109, 106, 106);
     border-radius: 4px;
     font-family: 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(105, 102, 102);
+    color: rgb(54, 54, 54);
     padding: 20px;
+    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/064/136/original/pexels-andre-moura-3289880.jpg?1674487287);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
+
+
 
 .Weather h1 {
     display: block;
