--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
+  background-repeat: no-repeat;
+  background-size: auto;
+  width: 100%;
+  height: 100%;
+   background-attachment: fixed;
 }
 
 code {
